# enigma2-plugins-1

./: .gitignore  .travis.yml  Makefile.am  README.md  Rules-po.mak  Rules_noxml-po.mak  configure.ac  updateallpo-multiOS.sh  updateallpo.sh  xml2po.py
3dsettings/po/: 3DSettings.pot  Makefile.am  de.po  fr.po  it.po  lt.po  tr.po
3dsettings/src/: Makefile.am  plugin.py
advancedmovieselection/po/: AdvancedMovieSelection.pot  Makefile.am  de.po  it.po  lt.po  nl.po
advancedmovieselection/src/: AdvancedMovieSelectionSetup.py  Makefile.am  MovieList.py  MoviePlayer.py  SearchTMDb.py  SearchTVDb.py
advhdmi/po/: AdvHdmi.pot  Makefile.am  de.po  fr.po  it.po  lt.po  nl.po
advhdmi/src/: Makefile.am  plugin.py
aihdcontroler/src/: Makefile.am
antiscrollbar/src/: Makefile.am
ardmediathek/src/: Makefile.am
aspectratioswitch/po/: AspectRatioSwitch.pot  Makefile.am  de.po  fr.po  it.po  lt.po  ru.po
aspectratioswitch/src/: Makefile.am  plugin.py
audiorestart/po/: AudioRestart.pot  Makefile.am  fr.po  lt.po
audiorestart/src/: Makefile.am
audiosync/: .project
audiosync/CONTROL/: control
audiosync/po/: AudioSync.pot  Makefile.am  ar.po  et.po  fr.po  lt.po
audiosync/src/: AC3delay.py  Makefile.am  plugin.py
automaticcleanup/po/: AutomaticCleanup.pot  Makefile.am  fa.po  fr.po  it.po  lt.po  nl.po
automaticcleanup/src/: Makefile.am  plugin.py
automatictimerlistcleanup/po/: AutomaticTimerlistCleanup.pot  Makefile.am  de.po  fa.po  fr.po  it.po  lt.po  tr.po
automatictimerlistcleanup/src/: Makefile.am
automaticvolumeadjustment/po/: AutomaticVolumeAdjustment.pot  Makefile.am  de.po  fr.po  hu.po  lt.po  nl.po  tr.po
automaticvolumeadjustment/src/: Makefile.am  plugin.py
autoresolution/po/: AutoResolution.pot  Makefile.am  cs.po  de.po  el.po  en.po  et.po  fa.po  fr.po  lt.po  nl.po  ru.po  tr.po  uk.po
autoresolution/src/: Makefile.am  plugin.py
autotimer/po/: AutoTimer.pot  Makefile.am  ar.po  cs.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  hu.po  it.po  lt.po  nl.po  pt.po  ru.po  sr.po  tr.po  uk.po
autotimer/src/: AutoPoller.py  AutoTimerList.py  AutoTimerWizard.py  Makefile.am  __init__.py  plugin.py
babelzapper/CONTROL/: postrm
babelzapper/src/: Makefile.am  README.md  plugin.py
birthdayreminder/po/: BirthdayReminder.pot  Makefile.am  de.po  en.po  fr.po  it.po  lt.po  nl.po
birthdayreminder/src/: Makefile.am
bitrateviewer/src/: Makefile.am
bmediacenter/po/: BMediaCenter.pot  Makefile.am  de.po  fr.po
bmediacenter/src/: GlobalFunctions.py  MC_AudioPlayer.py  MC_PictureViewer.py  MC_Settings.py  MC_VLCPlayer.py  MC_VideoPlayer.py  MC_WeatherInfo.py  plugin.py
bonjour/src/: plugin.py
cdinfo/src/: Makefile.am  plugin.py
channelselectionshorttitle/src/: Makefile.am
curlytx/: README.md  opkg-build
curlytx/po/: CurlyTx.pot  Makefile.am  fr.po  lt.po
dreamexplorer/src/: Makefile.am  myFileList.py  plugin.py  pyo2xml
dreamirc/src/: Makefile.am  dreamIRCSetup.py  plugin.py
dreammediathek/src/: Makefile.am  MoviePlayer.py  ServiceXML.py  plugin.py
dvdbackup/po/: DVDBackup.pot  Makefile.am  fr.po  lt.po  tr.po
dvdbackup/src/: Makefile.am  plugin.py
easyinfo/src/: Makefile.am  plugin.py
easymedia/po/: EasyMedia.pot  Makefile.am  cs.po  de.po  it.po  lt.po  nl.po
easymedia/src/: Makefile.am  plugin.py
ecasa/src/: Makefile.am
eibox/po/: EIBox.pot  Makefile.am
eibox/src/: Makefile.am  plugin.py
elektro/po/: Elektro.pot  Makefile.am  de.po  it.po  lt.po  nl.po  sr.po  tr.po
elektro/src/: Makefile.am  README.md  plugin.py
emailclient/po/: EmailClient.pot  Makefile.am  lt.po  nl.po  tr.po
emailclient/src/: Makefile.am  __init__.py  plugin.py  uu.py
emission/src/: Makefile.am
eparted/po/: Makefile.am  de.po  eParted.pot  fr.po  it.po  lt.po  nl.po  tr.po
eparted/src/: Makefile.am  eparted.py
epgbackup/po/: EPGBackup.pot  Makefile.am  de.po  en.po
epgbackup/src/: EPGBackupSupport.py  Makefile.am
epgrefresh/po/: EPGRefresh.pot  Makefile.am  de.po  en.po  es.po  et.po  fa.po  fi.po  fy.po  hu.po  it.po  lt.po  nl.po  pt.po  sr.po  sv.po  tr.po
epgrefresh/src/: Makefile.am  plugin.py
epgsearch/po/: EPGSearch.pot  ar.po  cs.po  de.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  hu.po  it.po  lt.po  pl.po  ru.po  sr.po  sv.po  tr.po  uk.po
epgsearch/src/: Makefile.am  __init__.py
epgsearchpli/po/: EPGSearch.pot  Makefile.am  cs.po  de.po  es.po  fa.po  fi.po  it.po  lt.po  nl.po  ru.po  sl.po  sr.po  sv.po  tr.po
epgsearchpli/src/: EPGSearch.py  Makefile.am
esame/src/: plugin.py
eurotictv/po/: de.po  eUroticTV.pot  en.po  fr.po  it.po  nl.po
eventlist/src/: Makefile.am
eventposition/src/: Makefile.am
fancontrol2/CONTROL/: prerm
fancontrol2/po/: FanControl2.pot  Makefile.am  cs.po  de.po  es.po  fa.po  fr.po  it.po  lt.po  nl.po  pl.po
fancontrol2/src/: Makefile.am  README.md  plugin.py
filebrowser/src/: Makefile.am  plugin.py
flashexpander/po/: Flashexpander.pot  Makefile.am
flashexpander/src/: Makefile.am  flashexpander.py
fritzcall/po/: FritzCall.pot  Makefile.am  de.po  en.po  es.po  it.po  nl.po  sr.po  tr.po
fritzcall/src/: Makefile.am  __init__.py  plugin.py
fstabeditor/src/: Makefile.am  dirSelect.py  plugin.py
ftpbrowser/po/: FTPBrowser.pot  Makefile.am
ftpbrowser/src/: FTPBrowser.py  Makefile.am
googlemaps/src/: Makefile.am
growlee/src/: Makefile.am
httpproxy/src/: Makefile.am
imdb/po/: IMDb.pot  Makefile.am  ar.po  cs.po  de.po  el.po  en.po  es.po  et.po  fa.po  fr.po  hu.po  it.po  lt.po  nl.po  pt.po  ru.po  sr.po  sv.po  tr.po
imdb/src/: Makefile.am  plugin.py
infobartunerstate/po/: InfoBarTunerState.pot  Makefile.am  de.po  it.po  lt.po  tr.po
infobartunerstate/src/: InfoBarTunerState.py  Makefile.am  skin.py
kiddytimer/po/: KiddyTimer.pot  Makefile.am  de.po  en.po  it.po  lt.po  nl.po  sr.po  tr.po
kiddytimer/src/: Makefile.am
lastfm/po/: LastFM.pot  Makefile.am  lt.po  nl.po
lastfm/src/: Makefile.am  plugin.py
logomanager/src/: Makefile.am  plugin.py
moviecut/: Makefile.am
vps/: Makefile.am
(+540 files in other folders)
